--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.hrakaroo
-VERSION_NAME=0.9.0-SNAPSHOT
+VERSION_NAME=0.9.0
 
 POM_URL=https://github.com/hrakaroo/glob-library-java
 POM_SCM_URL=https://github.com/hrakaroo/glob-library-java
