--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,7 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=hrakaroo
 POM_DEVELOPER_NAME=Joshua Gerth
 POM_ARTIFACT_ID=glob
-POM_NAME=glob
+POM_NAME=Java Glob Library
 POM_PACKAGING=jar
+POM_DESCRIPTION=Glob style pattern matcher for Java strings
+POM_INCEPTION_YEAR=2019
